[gd_scene load_steps=9 format=2]

[ext_resource path="res://Materials/metalic.tres" type="Material" id=1]
[ext_resource path="res://models/objects/axe.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Scripts/Items/Axe.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.406337, 1, 0.13301 )

[sub_resource type="Animation" id=5]
resource_name = "None"
tracks/0/type = "value"
tracks/0/path = NodePath("../axe:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Swing"
step = 0.033
tracks/0/type = "value"
tracks/0/path = NodePath("../axe:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.198, 0.99 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -29.1374, 22.8266, 69.8094 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Throw"
loop = true
step = 0.033
tracks/0/type = "value"
tracks/0/path = NodePath("../axe:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 1080 ) ]
}

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.282353, 0.129412, 0.054902, 1 )

[node name="Axe" type="RigidBody"]

[node name="Item" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.152433, -0.0529005, 0 )
script = ExtResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="Item"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0414922, 0.0375261, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Item"]
anims/None = SubResource( 5 )
anims/Swing = SubResource( 3 )
anims/Throw = SubResource( 4 )

[node name="ThrowDuration" type="Timer" parent="Item"]
wait_time = 0.6
one_shot = true

[node name="axe" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.044205, -1.30455, 0 )
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )
material/1 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.110941, -0.0153744, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Item" to="Item" method="_on_Item_body_entered"]
[connection signal="animation_finished" from="Item/AnimationPlayer" to="Item" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Item/ThrowDuration" to="Item" method="_on_ThrowDuration_timeout"]
